--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"elizabot": "^0.0.3",
+		"mdsvex": "^0.12.6",
+		"svelte-icons": "^2.1.0"
 	}
 }
