--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.10",
 		"elizabot": "^0.0.3",
 		"mdsvex": "^0.12.6",
 		"svelte-icons": "^2.1.0"
